2008-07-11  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fetchFields:_fieldsfrom:_startDateto:_endDatetitle:titlecomponent:_componentadditionalFilters:filters]):
	take exceptional modifications into account.

	* SoObjects/Appointments/iCalToDo+SOGo.m: new class module with
	category methods for iCalToDo.
	([iCalToDo -quickRecord]): same as for method below.

	* SoObjects/Appointments/iCalEvent+SOGo.m ([iCalEvent
	-quickRecord]): new method taken from OCSiCalFieldExtractor.

2008-07-10  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSString+DAV.m ([NSString -asWebDAVTuple]): new
	method that parses a webdav tag in the form "{ns:}tag" and returns
	a dictionary.

	* SoObjects/Appointments/SOGoUserFolder+Appointments.m
	([SOGoUserFolder -davPrincipalPropertySearch:queryContext]): new
	method to answer to "principal-property-search" report.

	* SoObjects/Appointments/SOGoAppointmentFolders.m
	([SOGoAppointmentFolders -davComplianceClassesInContext:]): new
	method that declares "calendar-access" and "calendar-schedule".

	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent
	-sendIMIPReplyForEvent:eventto:recipient]): new method, derived from
	sendResponseToOrganizer but more generic.
	([SOGoCalendarComponent -sendResponseToOrganizer]): make use of
	the new method mentionne above.

2008-07-09  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolders.m ([SOGoAppointmentFolders -davCreateCalendarCollection:newNameinContext:createContext]): 
	new method that execute a "MKCALENDAR" request.

	* SoObjects/SOGo/SOGoObject.m (SOGoSelectorForPropertyGetter): new
	function that returns the selector for the getter method for the
	specified property.
	(SOGoSelectorForPropertySetter): same as above for the setter
	method.

	* SoObjects/SOGo/WORequest+SOGo.m ([WORequest
	-davPatchedPropertiesWithTopTag:topTag]): new category method to